--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@tanstack/react-query": "^5.84.1",
     "@tanstack/react-query-devtools": "^5.84.1",
     "@tinymce/tinymce-react": "^6.3.0",
+    "@vitalets/google-translate-api": "^9.2.1",
     "antd": "^5.26.0",
     "axios": "^1.9.0",
-    "openai": "^6.1.0",
+    "openai": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
